# TakeFive

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.es.md  README.ja.md  README.md  README.zh-CN.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/desktop/: README.md  index.html  package-lock.json  package.json
apps/desktop/src/: App.css  App.tsx  i18n.tsx  main.tsx  runtime.ts  updater.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  platform.rs  reminder_settings.rs  reminder_surface.rs  scheduler_runtime.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs  occurrence_action_service.rs  sqlite_candidate_source.rs  sqlite_occurrence_store.rs
crates/domain/: Cargo.toml
crates/domain/src/: clock.rs  computer_usage.rs  interval.rs  lib.rs  model.rs  occurrence.rs  schedule.rs
crates/persistence-sqlite/: Cargo.toml
crates/persistence-sqlite/migrations/: 0001_core_schema.sql  0002_scheduler_decisions.sql
crates/persistence-sqlite/src/: db.rs  error.rs  lib.rs  models.rs  repository.rs
crates/persistence-sqlite/tests/: sqlite_integration.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs  policy.rs  ports.rs  reconciler.rs
docs/: TakeFive-MVP开发交付-v1.0.md  TakeFive-产品功能详细设计-v1.2.md  TakeFive-开发任务拆分与里程碑-v1.0.md  TakeFive-技术架构设计-v1.0.md  TakeFive-阶段0技术预研报告-v0.1.md  TakeFive-阶段1任务拆分与验收.md  TakeFive-阶段1开发进展-v0.1.md  TakeFive-阶段1开发进展-v0.2.md  releasing.md
