[package]
name = "takefive-application"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
takefive-domain = { path = "../domain" }
takefive-persistence-sqlite = { path = "../persistence-sqlite" }
takefive-scheduler = { path = "../scheduler" }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
