[package]
name = "takefive-domain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1"
serde_json = "1"
