[package]
name = "takefive-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
takefive-domain = { path = "../domain" }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync"] }

