[package]
name = "takefive-desktop"
version = "0.1.0"
description = "摸个鱼 · TakeFive desktop application"
authors = ["TakeFive Contributors"]
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "takefive_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1"
chrono = "0.4"
chrono-tz = "0.10"
takefive-application = { path = "../../../crates/application" }
takefive-domain = { path = "../../../crates/domain" }
takefive-persistence-sqlite = { path = "../../../crates/persistence-sqlite" }
takefive-scheduler = { path = "../../../crates/scheduler" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_System_RemoteDesktop",
  "Win32_System_SystemInformation",
  "Win32_System_Time",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
